
0.9.8e May 20, 2004
 * documentation updates
 * added check in lookup_pkg_dependencies() to see if ignore failed dependencies
   (--no-dep) was set, if so, actually ignore.
 * moved add_deps_to_trans() to transaction.c from action.c
 * moved pkg_info_t creation into init_pkg() function
 * compartmentalized package list creation and modification into init_pkg_list()
   and add_pkg_to_pkg_list() functions
 * added src/common.c and include/common.h for file and regex operations
 * don't exclude package for upgrade when one of it's dependencies is present
   in the exclude list, but is already installed
 * code updates
 * updated man page

0.9.8d May 02, 2004
 * makefile updates
 * misc code updates
 * updated translations
 * added Italian translation by Francesco Gigli (jaramir@slack.it)
 * --show-stats | -S to show download stats, inspired by Alexandre Zia (alexandre@erbio.widesoft.com.br)
 * example source entries for extra and testing package sets
 * set default URL to official slackware ftp in example.slapt-getrc
 * updated cmp_pkg_versions() for special case where # of version parts !=
   (fixes 3.8.1p1-i486-1 to 3.8p1-i486-1)
   thanks to Francesco Gigli (jaramir@slack.it)
 * added alias for --simulate [-s], and --no-prompt [-y]
 * updated pt_BR translation
 * es and es_ES translations

0.9.8c Mar 17, 2004
 * updated dutch translation adding missing newlines
 * makefile updates
 * documentation updates
 * Dutch translation by Michiel H. (myself@mhil.net)
 * updated dep script in FAQ
 * misc code updates
 * doc updates
 * fixed segfault when slapt-getrc isn't present (return value from open() not checked)

0.9.8b Jan 20, 2004
 * documentation updates (FAQ)
 * makefile updates (permissions etc)
 * remove default user/pass combo so that it can be overriden within the
   slapt-getrc in the source url
 * fixed strncpy() call, length now uses MD5_STR_LEN macro
 * added Norwegian translation by Joran Kvalvaag (jk at nerdworks dot org)