@@ -1,5 +1,7 @@
 
 0.9.8e May 20, 2004
+ * get compressed and uncompressed information from package log in
+   get_installed_pkgs()
  * documentation updates
  * added check in lookup_pkg_dependencies() to see if ignore failed dependencies
    (--no-dep) was set, if so, actually ignore.
